src/test/deca/context/invalid/class/invalid_instanceof3.deca
// Description:
//    Test of instanceof with a non-class type (int).
//    Test rule 3.40
//
// Result:
// [Begin Result]
//invalid_instanceof3.deca:24:23: Right operand of 'instanceof' must be a class not a null type. Rule 3.40.
// [End Result]
//
//    created on 13/01/2025


class MyClass {

    int hello() {
            println("Hello World !");
            return 1;
        }
}

{
    int test=2;
    MyClass a = new MyClass();
    boolean result = a instanceof test; // the second operand must be a class
}

